--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,13 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "ext-curl": "^7.1",
+        "authorizenet/authorizenet": "^1.9",
         "fideloper/proxy": "~3.3",
+        "laravel-validation-rules/credit-card": "^1.0",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "sonlabs/address-varification": "^1.1"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
@@ -20,7 +24,8 @@
     "autoload": {
         "classmap": [
             "database/seeds",
-            "database/factories"
+            "database/factories",
+            "constants"
         ],
         "psr-4": {
             "App\\": "app/"
